--- a/src/components/book-room-card/book-room-card.pug
+++ b/src/components/book-room-card/book-room-card.pug
@@ -13,7 +13,7 @@ mixin book-room-card(params)
             total,
         } = params;
 
-        const { numberWithSpaces } = require('./../utils');
+        const { numberWithSpaces } = require('./../../utils');
 
     div.book-room-card.card
         div.book-room-card__room-info
