--- a/src/components/room-info/room-info.pug
+++ b/src/components/room-info/room-info.pug
@@ -1,6 +1,6 @@
 mixin room-info(params)
     - const { number, type, price } = params;
-    - const { numberWithSpaces } = require('./../utils');
+    - const { numberWithSpaces } = require('./../../utils');
 
     div.room-info
         h2.room-info__number.title= number
