--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -1,27 +1,27 @@
-extends ../layout/blank
+extends ../../layout/blank
 
-include ../components/field/field
-include ../components/checkbox/checkbox
-include ../components/radio/radio
-include ../components/toggle-input/toggle-input
-include ../components/like-btn/like-btn
-include ../components/rate-btn/rate-btn
-include ../components/range-slider/range-slider
-include ../components/btn/btn
-include ../components/dropdown/dropdown
-include ../components/checkbox-list/checkbox-list
-include ../components/bullet-list/bullet-list
-include ../components/icon-text-list/icon-text-list
-include ../components/review/review
-include ../components/c-datepicker/c-datepicker
-include ../components/pick-room-card/pick-room-card
-include ../components/book-room-card/book-room-card
-include ../components/register-form/register-form
-include ../components/login-form/login-form
-include ../components/room-info-card/room-info-card
-include ../components/navbar/navbar
-include ../components/site-footer/site-footer
-include ../components/pagination/pagination
+include ../../components/field/field
+include ../../components/checkbox/checkbox
+include ../../components/radio/radio
+include ../../components/toggle-input/toggle-input
+include ../../components/like-btn/like-btn
+include ../../components/rate-btn/rate-btn
+include ../../components/range-slider/range-slider
+include ../../components/btn/btn
+include ../../components/dropdown/dropdown
+include ../../components/checkbox-list/checkbox-list
+include ../../components/bullet-list/bullet-list
+include ../../components/icon-text-list/icon-text-list
+include ../../components/review/review
+include ../../components/c-datepicker/c-datepicker
+include ../../components/pick-room-card/pick-room-card
+include ../../components/book-room-card/book-room-card
+include ../../components/register-form/register-form
+include ../../components/login-form/login-form
+include ../../components/room-info-card/room-info-card
+include ../../components/navbar/navbar
+include ../../components/site-footer/site-footer
+include ../../components/pagination/pagination
 
 block variables
     -
