--- a/src/components/room-info-card/room-info-card.pug
+++ b/src/components/room-info-card/room-info-card.pug
@@ -3,7 +3,7 @@ include ./../rate-btn/rate-btn
 
 mixin room-info-card(params)
     - const { number, type, price, photos, reviewsCount, rating } = params;
-    - const { getNoun } = require('./../utils');
+    - const { getNoun } = require('./../../utils');
     div.room-info-card
         div.room-info-card__carousel
             for photoName in photos
