--- a/src/components/site-footer/site-footer.pug
+++ b/src/components/site-footer/site-footer.pug
@@ -3,7 +3,7 @@ include ./../socials/socials
 
 mixin site-footer(params)
     - const { light } = params || {};
-    - const { baseUrl } = require('./../config');
+    - const { baseUrl } = require('./../../config');
     - const lightMod = (light) ? 'site-footer--light' : '';
 
     footer(class=`site-footer ${lightMod}`)
@@ -13,52 +13,52 @@ mixin site-footer(params)
                         a(href=baseUrl)
                             img(src=`${baseUrl}assets/img/logo.svg` alt='Toxin logo')
 
-                    div.site-footer__description Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+                    div.site-footer__description Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
 
                 nav.site-footer__menu
                     div
-                        h3.site-footer__menu-title.title.title--cta Navigation
+                        h3.site-footer__menu-title.title.title--cta Навигация
                         ul.site-footer__menu-list
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') About Us
+                                a.site-footer__menu-link(href='#') О нас
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') News
+                                a.site-footer__menu-link(href='#') Новости
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Support
+                                a.site-footer__menu-link(href='#') Служба поддержки
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Products
+                                a.site-footer__menu-link(href='#') Услуги
                     div
-                        h3.site-footer__menu-title.title.title--cta About Us
+                        h3.site-footer__menu-title.title.title--cta О нас
                         ul.site-footer__menu-list
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Who we are
+                                a.site-footer__menu-link(href='#') О сервисе
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Our team
+                                a.site-footer__menu-link(href='#') Наша команда
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Careers
+                                a.site-footer__menu-link(href='#') Вакансии
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Investors
+                                a.site-footer__menu-link(href='#') Инвесторы
                     div
-                        h3.site-footer__menu-title.title.title--cta Support
+                        h3.site-footer__menu-title.title.title--cta Служба поддержки
                         ul.site-footer__menu-list
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Documentation
+                                a.site-footer__menu-link(href='#') Соглашения
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Community
+                                a.site-footer__menu-link(href='#') Сообщества
                             li.site-footer__menu-item
-                                a.site-footer__menu-link(href='#') Get in Touch
+                                a.site-footer__menu-link(href='#') Связь с нами
 
                 label.site-footer__newsletter
-                    h3.site-footer__newsletter-title.title.title--cta Subscribe to our newsletter
-                    p.site-footer__newsletter-text Receive our latest news and promotions in your inbox!
+                    h3.site-footer__newsletter-title.title.title--cta Подписка
+                    p.site-footer__newsletter-text Получайте специальные предложения и новости сервиса
                     +field({
                       type: 'email',
-                      label: 'Your email address',
+                      label: 'Email',
                       hideLabel: true,
                       arrowIcon: true,
                     })
 
             div.site-footer__bottom
                 div.site-footer__bottom-container.container
-                    p.site-footer__copyright Copyright © 2018 Toxin UI Kit. All rights reserved.
+                    p.site-footer__copyright Copyright © 2018 Toxin отель. Все права зачищены.
                     +socials()
