--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -2,7 +2,7 @@
 
 .card {
     box-sizing: border-box;
-    width: 380px;
+    max-width: 380px;
     padding: 40px 30px 30px;
 
     background: #FFFFFF;
