--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -96,7 +96,7 @@
 .navbar__user {
     grid-area: user;
     display: grid;
-    grid-auto-flow: column;
+    //grid-auto-flow: column;
     grid-gap: 10px;
     justify-content: start;
     align-content: end;
@@ -104,6 +104,10 @@
 
     font-size: 14px;
     color: $color__dark-shade50;
+
+    @media #{$media__tablet} {
+        grid-auto-flow: column;
+    }
 
     @media #{$media__desktop} {
         grid-gap: 20px;
