--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -10,6 +10,6 @@ block variables
 block content
     div.home-page__bg
         div.home-page__container.container
-            h1.home-page__note Лучшие номера для вашей работы, отдыха и просто вдохновения
+            h1.home-page__title Лучшие номера для вашей работы, отдыха и просто вдохновения
 
             +pick-room-card('Найдём номера под ваши пожелания')
