--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -146,7 +146,7 @@ block content
 
             div.ui-kit-page__col
                 div
-                    +rangeSlider({
+                    +range-slider({
                       label: 'Range Slider',
                       from: 0,
                       to: 20000,
