--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -20,3 +20,4 @@ mixin range-slider(params)
             input.range-slider__output(type="text" readonly)
 
         div.range-slider__slider
+        p.range-slider__description= description
