--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -17,6 +17,15 @@
     border: none;
 }
 
+.range-slider__description {
+    margin-top: 14px;
+    margin-bottom: 0;
+
+    font-size: 12px;
+    line-height: 14px;
+    color: $color__dark-shade50;
+}
+
 .ui-slider.ui-slider-horizontal {
     position: relative;
     z-index: 0;
