--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -41,7 +41,8 @@
     align-items: center;
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-top: 2px;
+    margin-right: 8px;
 
     border: 1px solid $color__dark-shade25;
     border-radius: 4px;
