Fix bottom margin for title

--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -8,7 +8,7 @@ mixin checkbox-list(params)
         class=`checkbox-list ${expandableMod}`
         aria-expanded='true'
     )
-        p.checkbox-list__title.title.title--label
+        p.checkbox-list__title.title.title--3
             span= title
             if (expandable)
                 i.checkbox-list__more-icon.material-icons expand_more
