--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -8,7 +8,7 @@ block variables
     - const pageClass = 'home-page';
 
 block content
-    div.home-page__bg
+    main.home-page__bg
         div.home-page__container.container
             h1.home-page__title Лучшие номера для вашей работы, отдыха и просто вдохновения
 
