--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -3,6 +3,7 @@
 .card {
     box-sizing: border-box;
     max-width: 380px;
+    width: 100%;
     padding: 40px 30px 30px;
 
     background: #FFFFFF;
