Add hoverable mod

--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -47,3 +47,10 @@
         background: $gradient__dark;
     }
 }
+.bullet-list--hoverable .bullet-list__item {
+    cursor: pointer;
+
+    #{$hover} {
+        font-weight: bold;
+    }
+}
