--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,9 +1,10 @@
 mixin bullet-list(params)
-    - const { title, items, withMargins, voteColored } = params;
+    - const { title, items, withMargins, voteColored, hoverable } = params;
     - const withMarginsMod = (withMargins) ? 'bullet-list--with-margins' : '';
     - const voteColoredMod = (voteColored) ? 'bullet-list--vote-colored' : '';
+    - const hoverableMod = (hoverable) ? 'bullet-list--hoverable' : '';
 
-    div(class=`bullet-list ${withMarginsMod} ${voteColoredMod}`)
+    div(class=`bullet-list ${withMarginsMod} ${voteColoredMod} ${hoverableMod}`)
         if title
             p.bullet-list__title.title.title--label= title
 
