--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,6 +15,8 @@ $color__card-border: rgba(0, 0, 0, 0.12);
 
 $gradient__primary: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 $gradient__secondary: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+$gradient__orange: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
+$gradient__dark: linear-gradient(180deg, #919191 0%, #3D4975 100%);
 
 $font__main: 'Montserrat', Arial, sans-serif;
 $font__titles: 'Quicksand', Arial, sans-serif;
