Add color change

--- a/src/components/rating-circle/rating-circle.pug
+++ b/src/components/rating-circle/rating-circle.pug
@@ -11,9 +11,9 @@ mixin rating-circle(params)
     )
         div.rating-circle__chart
             div.rating-circle__votes
-                span.rating-circle__votes-count 260
+                span.rating-circle__votes-count
                 br
-                span.rating-circle__votes-noun голосов
+                span.rating-circle__votes-noun
 
         +bullet-list({
           voteColored: true,
