--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -235,8 +235,7 @@ block content
               date: '2019-08-11',
               text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
               likes: 12,
-              imageUrl: 'assets/img/user1.jpg',
-              imageUrlRetina: 'assets/img/user1@2x.jpg',
+              image: 'user1',
             })
 
     div.ui-kit-page__cards
