--- a/src/components/book-room-card/book-room-card.pug
+++ b/src/components/book-room-card/book-room-card.pug
@@ -2,6 +2,7 @@ include ./../btn/btn
 include ./../dropdown-guests/dropdown-guests
 include ./../price-list/price-list
 include ./../room-info/room-info
+include ./../c-datepicker/c-datepicker
 
 mixin book-room-card(params)
     -
