--- a/src/components/rating-circle/rating-circle.scss
+++ b/src/components/rating-circle/rating-circle.scss
@@ -32,15 +32,22 @@ $ct-series-colors: (
 }
 
 .rating-circle {
-    display: flex;
-    align-items: flex-end;
+    @media (min-width: 360px) {
+        display: flex;
+        align-items: flex-end;
+    }
 }
 
 .rating-circle__chart {
     position: relative;
     width: 120px;
     height: 120px;
-    margin-right: 30px;
+    margin: 0 auto 10px;
+    //margin-bottom: 10px;
+
+    @media (min-width: 360px) {
+        margin: 0 30px 0 0;
+    }
 }
 
 .rating-circle__votes {
