--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -7,6 +7,7 @@
     padding: 40px 0;
 
     @media #{$media__tablet} {
+        width: 380px;
         padding: 40px 30px 30px;
 
         background: #FFFFFF;
