Replace <header> with <nav>

--- a/src/components/navbar/navbar.pug
+++ b/src/components/navbar/navbar.pug
@@ -4,14 +4,14 @@ mixin navbar(params)
     - const { isLoggedIn, menuItems, userName } = params;
     - const { baseUrl } = require('./../../config');
 
-    header.navbar
+    nav.navbar
         div.navbar__container.container
             div.navbar__brand
                 a.navbar__brand-link(href=baseUrl)
                     span.visuallyhidden Главная страница
                     img.navbar__logo(src=`${baseUrl}assets/img/logo.svg` alt='Toxin logo')
 
-            nav.navbar__menu(aria-expanded="true")
+            div.navbar__menu(aria-expanded="true")
                 ul.navbar__menu-list
                     each menuItem in menuItems
                         - const { label, href, isActive, submenu } = menuItem;
